<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wowo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_post_list">喔喔</string>
    <string name="add_post">发布</string>
    <string name="action_notification">通知</string>
    <string name="action_new_ama">发布</string>
    <string name="action_more">更多</string>
    <string name="action_invite">邀请朋友</string>
    <string name="action_feedback">反馈</string>
    <string name="guidance_close">知道了</string>
    <string name="action_publish">发布</string>
    <string name="title_activity_create_ama">CreateAmaActivity</string>
    <string name="share_wowo">分享</string>
    <string name="menu_share">分享</string>
    <string name="menu_follow">关注</string>
    <string name="menu_remove">删除</string>
    <string name="menu_report_block">举报</string>
    <string name="placeholder_session_title"></string>
    <string name="placeholder_session_subtitle"></string>
    <string name="placeholder_session_subtitle_and_abstract"></string>
    <string name="add_to_schedule">Add to schedule</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menu_reply">回复评论</string>
    <string name="menu_like">点赞</string>
    <string name="title_activity_category">CategoryActivity</string>

</resources>
