<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_new_ama"
        android:icon="@drawable/ic_action_new_secret"
        android:showAsAction="always"
        android:title="@string/action_new_ama" />
    <item
        android:id="@+id/action_notification"
        android:icon="@drawable/ic_action_notification"
        android:showAsAction="always"
        android:title="@string/action_notification" />
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_action_more"
        android:showAsAction="always"
        android:title="@string/action_more">
        <menu>
            <item
                android:id="@+id/action_invite"
                android:title="@string/action_invite" />
            <item
                android:id="@+id/action_feedback"
                android:title="@string/action_feedback" />
            <item
                android:id="@+id/action_settings"
                android:title="@string/action_settings" />
        </menu>
    </item>
</menu>